﻿============================== Next release ==============================
  
  new data (thanks to Osamu Takayama, Technical University of Denmark, Lyngby, Denmark, for submitting data!)
    main/AlN/Beliaev1.yml
    main/AlN/Beliaev2.yml
  new data (thanks to Zhengfeng Guo, Huazhong University of Science and Technology, Wuhan, China, for submitting data!)
    main/ZrTe5/Guo-alpha.yml
    main/ZrTe5/Guo-beta.yml
	main/ZrTe5/Guo-alpha.yml
    main/Te/Guo-o.yml
    main/Te/Guo-e.yml
  new data (thanks to Tobias König, Leibniz-Institut für Polymerforschung Dresden, Germany!)
    other/mixed organic-inorganic/H2O-C3H5(OH)3/Gupta-0.yml
    other/mixed organic-inorganic/H2O-C3H5(OH)3/Gupta-20.yml
    other/mixed organic-inorganic/H2O-C3H5(OH)3/Gupta-50.yml
    organic/C3H8O3 - glycerol/Gupta.yml
    main/D2O/Sarkar.yml
    other/mixed organic-inorganic/D2O-C3H5(OH)3/Sarkar-25.yml
    other/mixed organic-inorganic/D2O-C3H5(OH)3/Sarkar-50.yml
    other/mixed organic-inorganic/D2O-C3H5(OH)3/Sarkar-75.yml
  new data (thanks to Tomasz Antosiewicz, University of Warsaw, Poland, for submitting data in YAML format!)
    main/MoS2/Munkhbat-o.yml
    main/MoS2/Munkhbat-e.yml
    main/MoSe2/Munkhbat-o.yml
    main/MoSe2/Munkhbat-e.yml
    main/MoTe2/Munkhbat-o.yml
    main/MoTe2/Munkhbat-e.yml
    main/NbSe2/Munkhbat-o.yml
    main/NbSe2/Munkhbat-e.yml
    main/ReS2/Munkhbat-alpha.yml
    main/ReS2/Munkhbat-beta.yml
    main/ReS2/Munkhbat-gamma.yml
    main/TaS2/Munkhbat-o.yml
    main/TaS2/Munkhbat-e.yml
    main/TaSe2/Munkhbat-o.yml
    main/TaSe2/Munkhbat-e.yml
    main/WS2/Munkhbat-o.yml
    main/WS2/Munkhbat-e.yml
    main/WSe2/Munkhbat-o.yml
    main/WSe2/Munkhbat-e.yml
    main/WTe2/Munkhbat-alpha.yml
    main/WTe2/Munkhbat-beta.yml
    main/WTe2/Munkhbat-gamma.yml
  new data (thanks to Alexandr Belosludtsev, Center for Physical Sciences and Technology, Vilnius, Lithuania, for submitting data!)
    main/Cr/Sytchkova.yml
  new data