@@ -1,0 +1,120 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "T. R. Leite, L. Zschiedrich, O. Kizilkaya, K. M. McPeak. Resonant plasmonic–biomolecular chiral interactions in the far-ultraviolet: Enantiomeric discrimination of sub-10 nm amino acid films, <a href=\"https://doi.org/10.1021/acs.nanolett.2c01724\"><i>Nano Lett.</i> <b>X</b>, XXX-XXX (2022)</a> (see Supporting Information)"
+COMMENTS: "L-Tyrosine film. Kappa values are also available in the supporting information of the original publication."
+DATA:
+  - type: tabulated nk
+    data: |
+        0.210 2.000163 0.389156
+        0.211 2.000369 0.379349
+        0.212 1.999517 0.369179
+        0.213 1.997640 0.359334
+        0.214 1.995027 0.350373
+        0.215 1.992151 0.342666
+        0.216 1.989584 0.336348
+        0.217 1.987907 0.331307
+        0.218 1.987618 0.327207
+        0.219 1.989060 0.323538
+        0.220 1.992372 0.319689
+        0.221 1.997472 0.315029
+        0.222 2.004073 0.308986
+        0.223 2.011719 0.301112
+        0.224 2.019850 0.291125
+        0.225 2.027855 0.278924
+        0.226 2.035143 0.264583
+        0.227 2.041180 0.248329
+        0.228 2.045533 0.230509
+        0.229 2.047888 0.211549
+        0.230 2.048054 0.191917
+        0.231 2.045965 0.172086
+        0.232 2.041665 0.152504
+        0.233 2.035289 0.133574
+        0.234 2.027045 0.115633
+        0.235 2.017189 0.098951
+        0.236 2.006005 0.083719
+        0.237 1.993787 0.070061
+        0.238 1.980822 0.058035
+        0.239 1.967377 0.047647
+        0.240 1.953695 0.03886
+        0.241 1.939989 0.031607
+        0.242 1.926443 0.025796
+        0.243 1.913214 0.021323
+        0.244 1.900437 0.018073
+        0.245 1.888224 0.015921
+        0.246 1.876670 0.014735
+        0.247 1.865846 0.014372
+        0.248 1.855803 0.014682
+        0.249 1.846561 0.01551
+        0.250 1.838109 0.0167
+        0.251 1.830402 0.018106
+        0.252 1.823360 0.019601
+        0.253 1.816875 0.021088
+        0.254 1.810824 0.022513
+        0.255 1.805074 0.023862
+        0.256 1.799507 0.02517
+        0.257 1.794028 0.02651
+        0.258 1.788580 0.027986
+        0.259 1.783152 0.029716
+        0.260 1.777784 0.03182
+        0.261 1.772563 0.034398
+        0.262 1.767614 0.037519
+        0.263 1.763093 0.041204
+        0.264 1.759165 0.045424
+        0.265 1.755988 0.050092
+        0.266 1.753698 0.055072
+        0.267 1.752390 0.060185
+        0.268 1.752110 0.065222
+        0.269 1.752844 0.069965
+        0.270 1.754520 0.074197
+        0.271 1.757010 0.077725
+        0.272 1.760137 0.080389
+        0.273 1.763690 0.082073
+        0.274 1.767429 0.082712
+        0.275 1.771097 0.082291
+        0.276 1.774424 0.080846
+        0.277 1.777113 0.078464
+        0.278 1.778817 0.075305
+        0.279 1.779098 0.071688
+        0.280 1.777470 0.068293
+        0.281 1.773713 0.066421
+        0.282 1.768612 0.06795
+        0.283 1.764758 0.074374
+        0.284 1.766206 0.084905
+        0.285 1.776024 0.095232
+        0.286 1.793168 0.099198
+        0.287 1.812100 0.09293
+        0.288 1.826173 0.077565
+        0.289 1.831634 0.058111
+        0.290 1.828963 0.039985
+        0.291 1.821316 0.026305
+        0.292 1.812072 0.017436
+        0.293 1.803337 0.012155
+        0.294 1.795839 0.009001
+        0.295 1.789521 0.006948
+        0.296 1.784093 0.005458
+        0.297 1.779298 0.004297
+        0.298 1.774970 0.003366
+        0.299 1.771007 0.002618
+        0.300 1.767346 0.002021
+        0.301 1.763946 0.001548
+        0.302 1.760774 0.001176
+        0.303 1.757807 0.000887
+        0.304 1.755022 0.000664
+        0.305 1.752402 0.000494
+        0.306 1.749930 0.000365
+        0.307 1.747591 0.000267
+        0.308 1.745373 0.000195
+        0.309 1.743264 0.000141
+        0.310 1.741254 0.000101
+        0.311 1.739334 0.000073
+        0.312 1.737495 0.000052
+        0.313 1.735732 0.000036
+        0.314 1.734037 0.000026
+        0.315 1.732405 0.000018
+        0.316 1.730831 0.000012
+        0.317 1.729311 0.000009
+        0.318 1.727840 0.000006
+        0.319 1.726416 0.000004
+        0.320 1.725036 0.000003
