@@ -1,0 +1,19 @@
+<!--
+this file is part of refractiveindex.info database
+refractiveindex.info database is in the public domain
+copyright and related rights waived via CC0 1.0
+-->
+
+<h1>Tyrosine, C<sub>9</sub>H<sub>11</sub>NO<sub>3</sub></h1>
+
+<ul>
+<li>L-Tyrosine</li>
+<li>4-hydroxyphenylalanine</li>
+<li>L-2-Amino-3-(4-hydroxyphenyl)propanoic acid</li>
+</ul>
+
+<h2>External links</h2>
+<ul>
+<li><a href="https://en.wikipedia.org/wiki/Amino_acid">Amino acid - Wikipedia</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Tyrosine">Tyrosine - Wikipedia</a></li>
+</ul>
